# melange-react-intl

./: .gitattributes  .gitignore  .npmignore  HISTORY.md  LICENSE  Makefile  README.md  copyPlatformBinaryInPlace.js  dune  dune-project  esy.json  melange-react-intl-ppx.opam  melange-react-intl.opam  package.json
.github/workflows/: bs-react-intl-ppx.yml  build.yml
binding/: dune
esy.lock/: index.json
lib/: ReactIntl.re  dune
ppx/: MelangeReactIntlPpx.re  Regexp.re  Resolver.re  dune
src/: BsReactIntlPpx.re  Resolver.re  dune
test/: Test.re  bsconfig.json  dune  esy.json  package.json
test/esy.lock/: index.json
test/ppx/: dune  params.t  ppx.sh
test/ppx/simple.t/: input.re  inputExceeding.re  run.t
test/src/: Test.re
