opam-version: "2.0"
version: "git"
maintainer: "Ahrefs"
authors: "Ahrefs"
dev-repo: "git+https://github.com/ahrefs/melange-react-intl-ppx.git"
license: "MIT"
homepage: "https://github.com/ahrefs/melange-react-intl-ppx"
bug-reports: "https://github.com/ahrefs/melange-react-intl-ppx/issues"

synopsis: "react-intl internationalization library binding and PPX to reduce messages defenition boilerplate code"

depends: [
  "ocaml" {>= "4.14.0"}
  "dune" {>= "3.0"}
  "ppxlib" {>= "0.21.0"}
  "reason" {>= "3.7.0"}
  "re" {= "1.10.4"}
  "reason-react"
  "ocaml-lsp-server" {with-dev-setup}
  "ocamlformat" {with-dev-setup}
  "melange" {with-dev-setup}
]

build: [["dune" "build" "-p" name "-j" jobs]]
