opam-version: "2.0"
version: "git"
maintainer: "Ahrefs"
authors: "Ahrefs"
dev-repo: "git+https://github.com/ahrefs/melange-react-intl.git"
license: "MIT"
homepage: "https://github.com/ahrefs/melange-react-intl"
bug-reports: "https://github.com/ahrefs/melange-react-intl/issues"

synopsis: "react-intl internationalization library binding and PPX to reduce messages definition boilerplate code"

depends: [
  "ocaml"
  "dune"
  "melange" {>= "2.0.0"}
  "ppxlib" {>= "0.21.0"}
  "reason" {>= "3.10.0"}
  "re" {>= "1.10.4"}
  "reason-react"
  "reason-react-ppx"
  "ocaml-lsp-server" {with-test}
  "ocamlformat" {with-test}
]

build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

depexts: [
  ["react-intl"] {npm-version = "^6.4.4"}
]

pin-depends: [
  [ "reason-react.dev"      "git+https://github.com/reasonml/reason-react.git#cf7bd8f8ff8740c58251b71756efa33ea730afbb" ]
  [ "reason-react-ppx.dev"  "git+https://github.com/reasonml/reason-react.git#cf7bd8f8ff8740c58251b71756efa33ea730afbb" ]
]
